# propsim

./: .gitignore  CMakeLists.txt  todo
src/: clickableLabel.cpp  clickableLabel.h  cudamatmul.cu  cudamatmul.h  helpers.cpp  helpers.h  main.cpp  mainwindow.cpp  mainwindow.h  sim.cpp  sim.h
src/cuda/: gridkernel.cu  gridkernel.h  mwmkernel.cu  mwmkernel.h
src/qt/: clickableLabel.cpp  clickableLabel.h
